fix: Use heavier font weight for countdown units on small screens

--- a/src/css/components/Countdown.css
+++ b/src/css/components/Countdown.css
@@ -62,7 +62,9 @@
 }
 
 @media screen and (max-width: 480px) {
+    .Countdown-separator,
     .Countdown-value {
         font-size: 21px;
+        font-weight: 500;
     }
 }
